att visual bugs

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -6,6 +6,8 @@
   "buy_with_partners": "Comprar con socios",
   "virtual_assistant": "Asistencia Virtual",
   "products": "Productos",
+  "verProducts": " Ver producto",
+  "download_manual": "Descargar manual",
   "manuals": "Manuales",
   "client": "Cliente",
   "partners": "Socios",
@@ -13,6 +15,7 @@
   "about": "Acerca de nosotros",
   "app": "descarga nuestra aplicación",
   "back": "Volver",
+  "saibamais": "Ver especificaciones",
   "Comes with WI-FI Module": "Viene con módulo WI-FI",
   "On/Off via key control and App": "Enciende y apaga con control de llave y App",
   "Adjustable voltage 8,000V, 12,000V, and 15,000V": "Tensión ajustable 8,000V, 12,000V y 15,000V",
