--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -6,6 +6,8 @@
   "buy_with_partners": "Comprar com parceiros",
   "virtual_assistant": "Atendimento Virtual",
   "products": "Produtos",
+  "verProducts":" Ver produto",
+  "download_manual": "Baixar manual",
   "manuals": "Manuais",
   "client": "Cliente",
   "partners": "Parceiros",
@@ -13,6 +15,7 @@
   "about": "Sobre nós",
   "app": "Baixe nosso App",
   "back": "Voltar",
+  "saibamais": "Ver especificações ",
   "Comes with WI-FI Module": "Já vai com Módulo WI-FI",
   "On/Off via key control and App": "Liga e Desliga por controle chave e App",
   "Adjustable voltage 8,000V, 12,000V, and 15,000V": "Tensão ajustável 8.000V, 12.000V e 15.000V",
